# yearfrac

./: Cargo.toml  README.md
.github/workflows/: lint-test-rust.yaml
src/: lib.rs
tests/: integration_test.rs
