[package]
name = "yearfrac"
version = "0.1.0"
edition = "2021"
authors = ["Anatoly Bugakov"]
license = "MIT OR Apache-2.0"
description = "Year fruction calculator for Rust"
homepage = "https://github.com/AnatolyBug/yearfrac"
repository = "https://github.com/AnatolyBug/yearfrac"
documentation = "https://docs.rs/yearfrac/"
keywords = ["date", "year", "fruction"]

[dependencies]
chrono = "0.4.19"
thiserror = "1.0.30"
