[package]
name = "yearfrac"
version = "0.2.0"
edition = "2021"
authors = ["Anatoly Bugakov"]
license = "MIT OR Apache-2.0"
description = "Year fruction calculator for Rust"
homepage = "https://github.com/AnatolyBug/yearfrac"
repository = "https://github.com/AnatolyBug/yearfrac"
documentation = "https://docs.rs/yearfrac/"
keywords = ["date", "datetime", "yearfraction"]

[dependencies]
chrono = "0.4.22"
thiserror = "1.0.30"
serde = {version = "1.0.137", features = ["derive"], optional=true}
utoipa = { version="3.3.0", optional = true}

[features]
default = []
serde = ["dep:serde"]
openapi = ["dep:utoipa"]
